@@ -11,6 +11,7 @@
 #workshop {
 #  database "dbname=workshop"
 #  database_schema "foo"
+#  journal "no"
 #}
 
 #cron "optional_name" {
