@@ -107,6 +107,9 @@ WorkshopConfigParser::Partition::ParseLine(FileLineParser &line)
         config.database = line.ExpectValueAndEnd();
     } else if (strcmp(word, "database_schema") == 0) {
         config.database_schema = line.ExpectValueAndEnd();
+    } else if (strcmp(word, "enable_journal") == 0) {
+        config.enable_journal = line.NextBool();
+        line.ExpectEnd();
     } else
         throw LineParser::Error("Unknown option");
 }
