@@ -1,6 +1,7 @@
 cm4all-workshop (2.0.13) unstable; urgency=low
 
   * workshop: show plan name and job id in log messages
+  * workshop: add option sends structured log messages to systemd journal
   * syslog: allow lines up to 1 kB
 
  --   
